# platform_specific_components

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  tatq
.github/workflows/: main.yml
S32K/: README.md  canfd.cpp
S32K/libuavcan/media/S32K/: build_config.hpp  canfd.hpp
S32K/module/: canfd.cpp
S32K/module/libuavcan/media/S32K/: canfd.hpp
S32K/src/: canfd.cpp
S32K/test/: CMakeLists.txt  S32K146.h  libuavcan.txt.in  s32_core_cm4.h  test_sanity.cpp
TCAN4550/: ti_can.c  ti_can.h  ti_can_registers.h
TCAN4550/Testing/: sketch_jun08a.ino  ti_can.c  ti_can.h
avr/libcanard/: README.md
avr/libcanard/avr-can-lib/: README.md
avr/libcanard/avr-can-lib/demo/: can.h  config.h  main.c  makefile
avr/libcanard/avr-can-lib/src/: at90can.c  at90can_get_message.c  at90can_private.h  at90can_send_buf_message.c  at90can_send_message.c  can_private.h  config.h  makefile  mcp2515.c  mcp2515_private.h  sja1000.c  utils.h
driver/src/: uc_stm32_can.cpp  uc_stm32_clock.cpp
kinetis/libuavcan/: README.md
linux/libuavcan/: README.md
linux/libuavcan/include/uavcan_linux/: socketcan.hpp
lpc11c24/libuavcan/: README.md  bootstrap.sh
lpc11c24/libuavcan/test_olimex_lpc_p11c24/: Makefile
nuttx/libcanard/: README.md
nxp_s32k/libuavcan/: README.md  s32k_libuavcan.hpp
nxp_s32k/libuavcan/driver/include/: build_condig.hpp  build_config.hpp  s32k_libuavcan.hpp
nxp_s32k/libuavcan/driver/src/: s32k_libuavcan.cpp
socketcan/libcanard/: Android.bp  README.md
socketcan/libcanard/src/: socketcan.c  socketcan.h
socketcan/libcanard/test/: CMakeLists.txt  configure_vcan.sh  main.cpp  test_io.cpp
stm32/libcanard/: .clang-format  .clang-tidy  README.md  _internal_bxcan.h  canard_stm32.c  canard_stm32.h
stm32/libcanard/bxcan/: README.md
stm32/libcanard/bxcan/src/: bxcan.c  bxcan.h  bxcan_registers.h
stm32/libuavcan/: README.md
stm32/libuavcan/driver/include/uavcan_stm32/: thread.hpp
stm32/libuavcan/driver/src/: uc_stm32_clock.cpp
submodules/: README.md
